# laerdal-qcpr-bluetooth

./: LICENSE  README.md
python/: README.md  pyproject.toml
python/laerdal_qcpr/: __init__.py  client.py  models.py  protocol.py  py.typed
python/laerdal_qcpr/examples/: live_monitor.py  minimal.py  scan.py  simple.py
