[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laerdal-qcpr"
version = "1.0.0"
description = "Python library for Laerdal QCPR mannequins over Bluetooth Low Energy"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["laerdal_qcpr*"]
